Added support for 1.20.1